<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>iot-main</artifactId>
        <groupId>com.oberasoftware</groupId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>home-hue</artifactId>

    <dependencies>
        <dependency>
            <groupId>io.github.zeroone3010</groupId>
            <artifactId>yetanotherhueapi</artifactId>
            <version>2.7.0</version>
        </dependency>
        <dependency>
            <groupId>com.oberasoftware</groupId>
            <artifactId>iot-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>net.straylightlabs</groupId>
            <artifactId>hola</artifactId>
            <version>0.2.3</version>
        </dependency>
    </dependencies>
</project>